# pdf2codebase

./: .gitignore  README.md  config.anthropic.example.toml  config.anthropic.live.toml  config.example.toml  config.live.toml  config.local.toml  config.vision.example.toml  pyproject.toml
docs/: prompt_layering.md  requirements_coverage.md
examples/: scheduler_reverse.txt  slugify.txt
prompts/blueprints/: code_contract.txt  codebase_manifest_schema.txt  delta_schema.txt  project_spec_schema.txt  pytest_contract.txt  response_discipline.txt  system_context.txt  test_plan_schema.txt  traceability.txt
prompts/skills/: code_generator.txt  codebase_generator.txt  delta_analyzer.txt  pytest_generator.txt  repair_generator.txt  spec_extractor.txt  test_plan_generator.txt
src/verifaix_pipeline/: __init__.py  cli.py  config.py  db.py  generators.py  llm.py  models.py  pdf.py  pipeline.py  validation.py
submission_output/live_scheduler/: README.md  codebase_manifest.json  delta_output.txt  main.py  project_spec.json  prompts.json  pyproject.toml  pytest_stdout.txt  test_plan.json
submission_output/live_scheduler/tests/: test_generated.py
submission_output/live_slugify/: README.md  codebase_manifest.json  main.py  project_spec.json  pyproject.toml  pytest_stdout.txt  test_plan.json
submission_output/live_slugify/tests/: test_generated.py
submission_output/sample_scheduler/: README.md  codebase_manifest.json  delta_output.txt  main.py  project_spec.json  pyproject.toml  pytest_stdout.txt  test_plan.json
tests/: test_pipeline.py
(+1 files in other folders)
